--- a/prepros-6.config
+++ b/prepros-6.config
@@ -17,7 +17,14 @@
     ],
     "hideUnwatchedFiles": false
   },
-  "imports": [],
+  "imports": [
+    {
+      "path": "scss/all.scss",
+      "imports": [
+        "scss/components/_top-head.scss"
+      ]
+    }
+  ],
   "projectView": {
     "selectedView": "file-tree"
   },
