--- a/prepros-6.config
+++ b/prepros-6.config
@@ -4,7 +4,9 @@
   "exportConfig": true,
   "fileConfigs": [],
   "fileTree": {
-    "expandedDirs": [],
+    "expandedDirs": [
+      "scss"
+    ],
     "hideSystemFiles": true,
     "systemFiles": [
       ".*",
@@ -67,7 +69,7 @@
     "wp-includes"
   ],
   "server": {
-    "port": 7879,
+    "port": 7881,
     "assignNewPortAutomatically": true,
     "enable": true,
     "proxy": {
