some blocks chamged

--- a/prepros-6.config
+++ b/prepros-6.config
@@ -23,7 +23,10 @@
     {
       "path": "scss/all.scss",
       "imports": [
-        "scss/components/_top-head.scss"
+        "scss/components/_top-head.scss",
+        "scss/components/_block.scss",
+        "scss/components/_instructions.scss",
+        "scss/components/_footer.scss"
       ]
     }
   ],
