changes in pricing plans

--- a/prepros-6.config
+++ b/prepros-6.config
@@ -26,6 +26,7 @@
         "scss/components/_top-head.scss",
         "scss/components/_block.scss",
         "scss/components/_instructions.scss",
+        "scss/components/_pricing.scss",
         "scss/components/_footer.scss"
       ]
     }
